--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
     image: ecommerce-registry-server:1.0.0
     build:
       dockerfile: Dockerfile
-    container_name: ecommerce-registry-server
+    container_name: ecommerce-registry
     ports:
       - 7070:7070
     restart: unless-stopped
